package com.example.bbs;

import android.content.Intent;
import android.database.Cursor;
import android.database.sqlite.SQLiteDatabase;
import android.database.sqlite.SQLiteOpenHelper;
import android.media.MediaPlayer;
import android.os.Bundle;
import android.os.Message;
import android.view.Menu;
import android.view.View;
import android.widget.ImageView;
import android.widget.LinearLayout;
import android.widget.TextView;


import com.example.bbs.databinding.ActivityMainBinding;
import com.example.bbs.ui.home.HomeFragment;
import com.example.bbs.ui.login.MySqliteOpenHelper;
import com.example.bbs.ui.login.User;
import com.example.bbs.ui.personal.PersonalFragment;
import com.example.bbs.ui.post.PostFragment;
import com.example.bbs.ui.setting.MusicShow;
import com.google.android.material.navigation.NavigationView;

import androidx.annotation.Nullable;
import androidx.fragment.app.Fragment;
import androidx.fragment.app.FragmentManager;
import androidx.fragment.app.FragmentTransaction;
import androidx.navigation.NavController;
import androidx.navigation.Navigation;
import androidx.navigation.ui.AppBarConfiguration;
import androidx.navigation.ui.NavigationUI;
import androidx.drawerlayout.widget.DrawerLayout;
import androidx.appcompat.app.AppCompatActivity;

import java.util.Objects;

public class Main2Activity extends AppCompatActivity {

    private AppBarConfiguration mAppBarConfiguration;
    private ActivityMainBinding binding;
    protected User user;
    private TextView user_name,user_content;
    private ImageView user_icon;
    public static Main2Activity instance = null;
    public static MediaPlayer mediaPlayer = null;
    public static Thread thread = null;

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);

        mediaPlayer = new MediaPlayer();

        binding = ActivityMainBinding.inflate(getLayoutInflater());
        setContentView(binding.getRoot());

        setSupportActionBar(binding.appBarMain.toolbar);
        DrawerLayout drawer = binding.drawerLayout;
        NavigationView navigationView = binding.navView;
        mAppBarConfiguration = new AppBarConfiguration.Builder(
                R.id.nav_home, R.id.nav_gallery, R.id.nav_slideshow,R.id.nav_setting)
                .setDrawerLayout(drawer)
                .build();
        NavController navController = Navigation.findNavController(this, R.id.nav_host_fragment_content_main);
        NavigationUI.setupActionBarWithNavController(this, navController, mAppBarConfiguration);
        NavigationUI.setupWithNavController(navigationView, navController);
        init();

        NavigationView navigationView1 = (NavigationView) findViewById(R.id.nav_view);
        View headerView = navigationView.getHeaderView(0);
        user_icon = (ImageView) headerView.findViewById(R.id.user_icon);
        user_icon.setImageResource(user.getImage());
        user_name = (TextView) headerView.findViewById(R.id.user_name);
        user_name.setText(user.getUserName());
        user_content = (TextView) headerView.findViewById(R.id.user_content);
        user_content.setText(user.getContent());
        instance = this;
    }


    void init(){
        Intent intent = getIntent();
        user = (User) intent.getSerializableExtra("user");
        setUser(user);
        mediaPlayer = MediaPlayer.create(Main2Activity.this,R.raw.music01);
        mediaPlayer.start();
    }

    @Override
    public boolean onCreateOptionsMenu(Menu menu) {
        //getMenuInflater().inflate(R.menu.main, menu);
        return true;
    }

    @Override
    public boolean onSupportNavigateUp() {
        NavController navController = Navigation.findNavController(this, R.id.nav_host_fragment_content_main);
        return NavigationUI.navigateUp(navController, mAppBarConfiguration)
                || super.onSupportNavigateUp();
    }

    public User getUser(){
        return user;
    }

    public void setUser(User user){
        this.user = user;
    }


}