@startuml

title __BBS's Class Diagram__\n

  namespace com.example.bbs {
    class com.example.bbs.Main2Activity {
        {static} + instance : Main2Activity
        {static} + mediaPlayer : MediaPlayer
        {static} + thread : Thread
        - mAppBarConfiguration : AppBarConfiguration
        - user_content : TextView
        - user_icon : ImageView
        - user_name : TextView
        + getUser()
        + onCreateOptionsMenu()
        + onSupportNavigateUp()
        + setUser()
        # onCreate()
        ~ init()
    }
  }
  

  namespace com.example.bbs {
    class com.example.bbs.start {
        {static} + MODE : int
        {static} + PREFERENCE_NAME : String
        - Login_button : Button
        - Register_button : Button
        - cbSave : CheckBox
        - checkBox : CheckBox
        - password : TextView
        - user : TextView
        + login()
        # onCreate()
        # onStart()
        # onStop()
        ~ init()
        - loadSharedPreferences()
        - saveSharedPreferences()
    }
  }
  

  com.example.bbs.Main2Activity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bbs.Main2Activity o-- com.example.bbs.ui.login.User : user
  com.example.bbs.Main2Activity o-- com.example.bbs.databinding.ActivityMainBinding : binding
  com.example.bbs.start -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
